# XMemeChatter

./: .replit  ai_generator.py  app.py  config.json  config.py  models.py  pyproject.toml  screen_manager.py  x_automation.py
instance/: x_replies.db
static/css/: custom.css
static/js/: main.js
templates/: index.html  layout.html
